--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Leon
-configuracion.autor.email=leon@mail.com
+configuracion.texto=Configurando entorno de desarrollo
+configuracion.autor.nombre=John Doe
+configuracion.autor.email=john@mail.com
