--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
-spring.datasource.driver-class-name=com.postgresql.Driver
+#spring.datasource.driver-class-name=com.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=leon12345
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
 
