--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
+spring.datasource.url=jdbc:postgresql://microservicios-postgres12:5432/db_springboot_cloud
 spring.datasource.driver-class-name=com.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=leon12345
