--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://microservicios-mysql8/db_springboot_cloud?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=leon12345
+spring.datasource.password=sasa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
